# pycextdemo

./: .gitignore  CMakeLists.txt  README.md  Test
cmake/: printproplist.cmake  readfiletest.cmake
hello/: CMakeLists.txt  greet.cpp  greet.h  greetmain.cpp
hello-pyext/: CMakeLists.txt  helloext.cpp  test.py
libcmake/: printproplist.cmake  readfiletest.cmake  version_check.cmake
one/: CMakeLists.txt
one/two/: CMakeLists.txt
pyext/: CMakeLists.txt  helloext.cpp
three/: CMakeLists.txt
two/: CMakeLists.txt
